--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img class="fondo" src="./fondoPaisajeUrbano.webp" alt="fondo">
     <h1>Curriculum Vitae</h1>
 </body>
 </html>
